--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-redis>=4.5.1
-numpy>=1.23.0
+redis>=4.5.0
+SQLAlchemy>=2.0.0
+numpy>=1.24.0
+# Optional dependencies for neural embeddings
 torch>=2.0.0
+transformers>=4.29.0
+sentence-transformers>=2.2.2
 pandas>=1.5.0
 scikit-learn>=1.1.0
 sqlite3-plus>=0.3.0
