--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
-redis>=4.5.0
-SQLAlchemy>=2.0.0
-numpy>=1.24.0
-# Optional dependencies for neural embeddings
-torch>=2.0.0
-transformers>=4.29.0
-sentence-transformers>=2.2.2
-pandas>=1.5.0
-scikit-learn>=1.1.0
-sqlite3-plus>=0.3.0
-pydantic>=2.0.0
-typing-extensions>=4.3.0
-jsonschema>=4.0.0
-pyarrow>=12.0.0
-tenacity>=8.0.0
-tqdm>=4.65.0
-loguru>=0.7.0
-faiss-cpu>=1.7.0
-python-dotenv>=1.0.0 
+redis
+SQLAlchemy
+numpy
+pandas
+pydantic
+typing-extensions
+jsonschema
+pyarrow
+tenacity
+tqdm
+loguru
+python-dotenv
+deepdiff
+
+# Neural embedding dependencies
+torch
+transformers
+sentence-transformers
+scikit-learn
+faiss-cpu
+
+# Database dependencies
+sqlite3-plus
+
+# Testing dependencies
+pytest
+pytest-asyncio 
