--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,5 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.defaultInterpreterPath": "${workspaceFolder}/venv/Scripts/python.exe",
-    "terminal.integrated.defaultProfile.windows": "PowerShell",
-    "terminal.integrated.profiles.windows": {
-        "PowerShell": {
-            "source": "PowerShell",
-            "args": ["-NoExit", "-Command", "& '${workspaceFolder}/venv/Scripts/Activate.ps1'"]
-        }
-    }
+    "python.testing.pytestEnabled": true
 }
