--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ deepdiff
 # Neural embedding dependencies
 torch
 transformers
-sentence-transformers
+# sentence-transformers
 scikit-learn
 faiss-cpu
 
