Comment out log_file setting in pytest.ini to prevent unintended logging during test runs. This change aims to streamline test output and improve clarity in test results.

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,7 +4,7 @@ markers =
     integration: mark a test as an integration test (requires external services)
 
 # Store test result logs in a dedicated directory
-log_file = tests/pytest_logs.txt
+; log_file = tests/pytest_logs.txt
 log_file_level = INFO
 
 # Only print information from failing tests
