Enhance changelog generation workflow by adding delimiters for output formatting. This change ensures that the generated changelog entry is properly encapsulated, improving the clarity and structure of the output in GitHub Actions.

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -116,7 +116,9 @@ jobs:
           fi
           
           # Save the output to GitHub step output
+          echo "changelog_entry<<EOF" >> $GITHUB_OUTPUT
           cat pr_changelog_entry.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Generate visual changelog
         env:
