Update requirements.txt to include additional dependencies for enhanced functionality
This commit adds `matplotlib`, `numpy`, `tiktoken`, `openai`, and `redis[hiredis]` to the `requirements.txt` file, expanding the project's capabilities for data visualization, numerical operations, and interaction with OpenAI's API. Additionally, `markdown` is included for improved documentation support.

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,12 @@ sqlite3-plus
 # Testing dependencies
 pytest
 pytest-asyncio 
+
+matplotlib
+numpy
+tiktoken
+openai
+
+# Additional needed dependencies
+redis[hiredis]
+markdown
