Add workflow-requirements.txt for dependency management and update workflows to use it
This commit introduces a new `workflow-requirements.txt` file to manage project dependencies, including `openai`, `markdown`, `matplotlib`, `numpy`, and `tiktoken`. The GitHub Actions workflows `update-changelog.yml` and `update-pr-details.yml` are updated to install dependencies from this new file, streamlining the installation process and ensuring consistency across workflows.

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -40,8 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install openai markdown matplotlib numpy tiktoken
+          pip install -r workflow-requirements.txt
 
       - name: Get PR diff information
         id: get_pr_diff
