--- a/.github/workflows/update-pr-details.yml
+++ b/.github/workflows/update-pr-details.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install openai
+          pip install -r workflow-requirements.txt
 
       - name: Generate improved PR title and description
         id: generate_pr_details
