Refactor EOF handling in update-changelog.yml for improved script execution
This commit updates the `update-changelog.yml` workflow by changing the EOF delimiter in the JSON payload and changelog entry creation from single quotes to a tab-indented format. This adjustment enhances the script's readability and ensures proper handling of multi-line strings, contributing to a more reliable workflow execution.

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -113,7 +113,7 @@ jobs:
             echo "OpenAI API key is set, proceeding with API call"
             
             # Create a temporary payload file for the API call
-            cat > payload.json << 'EOF'
+            cat > payload.json <<-EOF
             {
               "model": "gpt-4o",
               "messages": [
@@ -170,7 +170,7 @@ jobs:
           if [ ! -s pr_changelog_entry.md ]; then
             echo "Warning: Generated changelog is empty."
             echo "Creating a basic changelog entry as fallback..."
-            cat > pr_changelog_entry.md << 'EOF'
+            cat > pr_changelog_entry.md <<-EOF
             ## [0.0.1] - $(date +%Y-%m-%d)
             
             ### Changes
