--- a/.github/workflows/update-pr-details.yml
+++ b/.github/workflows/update-pr-details.yml
@@ -1,10 +1,12 @@
-name: Update PR Details
+name: Update PR Details (Disabled)
 
 on:
-  pull_request:
-    types: [opened]
-    branches:
-      - main
+  # Manual trigger only
+  workflow_dispatch:
+  # pull_request:
+  #   types: [opened]
+  #   branches:
+  #     - main
 
 jobs:
   update-pr-details:
