Update requirements.txt to include additional dependencies for data analysis and OpenAI integration
This commit adds pandas, psutil, and memory_profiler to the requirements.txt file, enhancing the project's capabilities for data visualization and performance monitoring, as well as supporting OpenAI functionalities.

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,14 @@ sqlite3-plus
 pytest
 pytest-asyncio 
 
+# Visualization and analysis
 matplotlib
 numpy
+pandas
+psutil
+memory_profiler
+
+# OpenAI dependencies
 tiktoken
 openai
 openai-agents
