Add hot reloading and memory file loading functionality
This commit introduces hot reloading for development mode using `electron-reloader`. It adds a new function to load memory files from a specified directory and integrates this functionality into the Electron app. The preload script is updated to expose the new API for loading default memories, and the React app is enhanced to load memories on startup with error handling and loading states. Additionally, the package.json is updated to include a new script for development mode.

--- a/explorer/package.json
+++ b/explorer/package.json
@@ -6,9 +6,13 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "electron . --dev"
   },
   "dependencies": {
     "electron": "^29.0.0"
+  },
+  "devDependencies": {
+    "electron-reloader": "^1.2.3"
   }
 } 
